# qwem

./: .gitignore  ExptTrace.py  FileManager.py  README.md  batcher_benchmark.py  compute_cooccurrence.py  plotting.py  pyproject.toml  qwem.py  utils.py
data/: env.sh  get_core_utils.sh  prepare_analogies.py  prepare_cocanow.py  prepare_enwiki.py  prepare_text8.py
expts/: ablation_omn.py  ablation_quartic.py  ablation_qwem.py  ablation_sgns.py  example.py  qwem_fast.py  qwem_large.py  qwem_small.py  sgns_cocanow.py  sgns_fast.py  sgns_large.py  sgns_small.py
launch/: ablation.sh  coca.sh  main-expt.sh
notebooks/: appx-ablation.ipynb  appx-extra.ipynb  appx-top1.ipynb  benchmarks.ipynb  fig1.ipynb  fig2.ipynb  fig3.ipynb  fig4.ipynb  figmore.ipynb  mstar_eigh.ipynb  mstar_eigs.ipynb
word2vec_tied/: makefile  run_w2v.sh  word2vec.c
