[project]
name = "qwem-priv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.1",
    "flax==0.10.3",
    "ipykernel>=6.30.1",
    "jax[cuda13]>=0.7.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numba>=0.62.1",
    "numpy>=2.3.2",
    "optax>=0.2.5",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
